More db functionality + signup and login page

--- a/static/index.html
+++ b/static/index.html
@@ -3,16 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-Time Forum</title>
+    <title>Real Time Forum</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-		
-    </header>
-    <main id="content">
-
-    </main>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
