--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,8 @@
     <title>Real Time Forum</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="post.css">
+    <link rel="stylesheet" href="sideBar.css">
 </head>
 <body>
     <script type="module" src="main.js"></script>
