added front for private message + livechat with wb between 2 peoples, need a lot of fixex

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/post.css">
     <link rel="stylesheet" href="css/sideBar.css">
     <link rel="stylesheet" href="css/comment.css">
+    <link rel="stylesheet" href="css/contacts.css">
+    <link rel="stylesheet" href="css/messages.css">
 </head>
 <body>
     <script type="module" src="main.js"></script>
